# TestRustDiscordBot

./: .gitignore  Cargo.toml
src/: main.rs
