[package]
name = "discordbot"
version = "0.1.0"
authors = ["Patrick <contact@alertingavian.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3.15"
tracing-appender = "0.2.2"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "http"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
